packages/melody-compiler/__tests__/__fixtures__/error/empty_async_mount.template
{% mount async './parts/#{ part }.twig' as 'bar' with {foo: 'bar'} delay placeholder by 1s %}
{% endmount %}
